--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
@@ -484,30 +484,21 @@ html {
         opacity: 0.5 !important;
     }
 
-.preview-image-dialog__image__wraper {
-    position: fixed;
-    z-index: 1;
+
+.preview-image-dialog-wraper {
+    position: relative;
     height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
 }
 
-.preview-image-dialog__image {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-    .preview-image-dialog__image img {
+    .preview-image-dialog-wraper img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        margin: auto;
         max-width: 100%;
-        max-height: 100%;
         vertical-align: middle;
-        transform: scale3d(1,1,1);
     }
 
 wc-waterfall > * {
