💄 调整预览图样式，恢复之前的行为

--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PreviewImageDialog/PreviewImageDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PreviewImageDialog/PreviewImageDialog.razor
@@ -39,7 +39,9 @@
         </MToolbar>
 
         <div class="preview-image-dialog-wraper">
-            <img @ref="_previewImg" src="@Src" />
+            <div class="preview-image-dialog-image">
+                <img @ref="_previewImg" src="@Src" />
+            </div>
         </div>
     </MCard>
 </MDialogExtension>
