🆕 切换zoom组件以及恢复css

--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PreviewImageDialog/PreviewImageDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/PreviewImageDialog/PreviewImageDialog.razor
@@ -38,9 +38,9 @@
             </MButton>
         </MToolbar>
 
-        <div class="preview-image-dialog-wraper">
-            <div class="preview-image-dialog-image">
-                <img @ref="_previewImg" src="@Src" />
+        <div class="preview-image-dialog__image__wraper">
+            <div id="@id" class="preview-image-dialog__image">
+                <img src="@Src" />
             </div>
         </div>
     </MCard>
