--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
@@ -484,7 +484,7 @@ html {
         opacity: 0.5 !important;
     }
 
-.preview-image-dialog-wraper {
+.preview-image-dialog__image__wraper {
     position: fixed;
     z-index: 1;
     height: 100%;
@@ -493,21 +493,22 @@ html {
     left: 0;
 }
 
-.preview-image-dialog-image {
-    position: relative;
+.preview-image-dialog__image {
+    width: 100%;
     height: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-    .preview-image-dialog-image img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        margin: auto;
-        max-width: 100%;
-        vertical-align: middle;
+    .preview-image-dialog__image img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
     }
+
 
 wc-waterfall > * {
     transition: all .2s;
