--- a/src/SwashbucklerDiary.Rcl/Pages/Write/WritePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Write/WritePage.razor
@@ -159,12 +159,12 @@
 
 <SelectWeatherDialog @bind-Visible="showWeather"
                      @bind-Value="@SelectedWeather"
-                     ShowText="showIconText">
+                     @bind-ShowText="showIconText">
 </SelectWeatherDialog>
 
 <SelectMoodDialog @bind-Visible="showMood"
                   @bind-Value="@SelectedMood"
-                  ShowText="showIconText">
+                  @bind-ShowText="showIconText">
 </SelectMoodDialog>
 
 <SelectLocationDialog @bind-Visible="showLocation"
