--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectMoodDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectMoodDialog.razor
@@ -7,6 +7,7 @@
                   ValueChanged="ValueChanged"
                   Title="@(I18n.T("SelectMood"))"
                   ShowText="ShowText"
+                  ShowTextChanged="ShowTextChanged"
                   Items="GlobalConfiguration.MoodIcons"
                   ItemValue="it=>it.Key"
                   ItemText="@(item=>I18n.T("Mood." + item.Key))"
@@ -25,4 +26,7 @@
 
     [Parameter]
     public bool ShowText { get; set; }
+
+    [Parameter]
+    public EventCallback<bool> ShowTextChanged { get; set; }
 }
