💄 style: update some vditor icons style

--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
@@ -16,6 +16,11 @@
         padding: 0px 8px !important;
     }
 
+.vditor-toolbar__item svg {
+    width: 16px;
+    height: 16px;
+}
+
 .vditor-content {
     min-height: 0px;
 }
