--- a/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/MarkdownPreview.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/MarkdownPreview.razor
@@ -4,7 +4,10 @@
                        Value="@Value"
                        Class="@InternalClass"
                        Style="@Style"
+                       OutlineClass="md-preview__outline"
                        Options="_options"
+                       Outline="Outline"
+                       RightOutline="RightOutline"
                        OnAfter="HandleOnAfter">
 </VditorMarkdownPreview>
 
