--- a/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
@@ -123,6 +123,8 @@
                                  Style="padding-top:10px"
                                  FirstLineIndent="firstLineIndent"
                                  TaskListLineThrough="taskListLineThrough"
+                                 Outline="outline"
+                                 RightOutline="rightOutline"
                                  OnAfter="HandleFirstQuery">
                 </MarkdownPreview>
             }
