--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/vditor-extend.css
@@ -35,6 +35,7 @@
     padding-left: 0px !important;
     padding-right: 0px !important;
     --editor-bottom: 48px !important;
+    scroll-behavior: smooth;
 }
 
     .vditor-reset *::-webkit-scrollbar {
@@ -65,6 +66,26 @@
     }
 
 .vditor-ir__node--expand[data-type="code-block"] .vditor-ir__preview {
+    display: none;
+}
+
+.vditor-outline {
+    margin-right: 32px;
+    padding-top: 8px;
+    background-color: initial;
+    border: none;
+}
+
+    .vditor-outline::-webkit-scrollbar {
+        display: initial !important;
+    }
+
+    .vditor-outline.vditor-outline--right {
+        margin-left: 32px;
+        margin-right: initial;
+    }
+
+.vditor-outline__title {
     display: none;
 }
 
@@ -129,5 +150,11 @@
 
     .vditor-toolbar-help {
         min-height: var(--vditor-toolbar-height);
+    }
+}
+
+@media screen and (max-width:960px) {
+    .vditor-outline {
+        display: none !important;
     }
 }
