--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectLocationDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectLocationDialog.razor
@@ -75,7 +75,7 @@
             <MButton Text="true"
                      Color="primary"
                      OnClick="HandleOnOK">
-                @(I18n.T("Share.Save"))
+                @(I18n.T("Share.OK"))
             </MButton>
         </MCardActions>
     </MCard>
