Update package reference

--- a/src/SwashbucklerDiary.Rcl/Layout/MainLayoutNavDrawer/MainLayoutNavDrawer.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainLayoutNavDrawer/MainLayoutNavDrawer.razor
@@ -6,6 +6,7 @@
                    Stateless="true"
                    MiniVariant="true"
                    MiniVariantWidth="76"
+                   Touchless="true"
                    Style="top:initial !important;">
     <MList Nav>
         @foreach (var item in Items)
